# avalon-rs

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md  hola.txt
doc/design/: Avalon-RS-Classes.graphml
src/: character.rs  evil_character.rs  game_manager.rs  lib.rs  main.rs  utils.rs
src/action/: finish_quest.rs  mod.rs
src/action/test/: test_mod.rs
src/core/: election.rs  mod.rs
src/core/test/: mod.rs  test_election.rs
src/datamodel/: board.rs  game.rs  game_manager.rs  game_status.rs  mod.rs  player.rs  player_action_manager.rs  turn_manager.rs
src/datamodel/character/: assassin.rs  loyal_servant_of_arthur.rs  merlin.rs  minion_of_mordred.rs  mod.rs  mordred.rs  morgana.rs  oberon.rs  percival.rs
src/datamodel/characters/: assassin.rs  character.rs  loyal_servant_of_arthur.rs  merlin.rs  minion_of_mordred.rs  mordred.rs  morgana.rs  oberon.rs  percival.rs
src/datamodel/quest/: finish_quest.rs  finished_quest.rs  mod.rs  quest.rs  quest_member.rs  quest_proposer.rs  quest_proposer_role_action_manager.rs
src/datamodel/quests/: finished_quest.rs  mod.rs  quest.rs  quest_new.rs  quest_objective.rs  quest_proposal.rs  winner_rule.rs
src/datamodel/test/: mod.rs  test_game.rs  test_game_manager.rs  test_game_status.rs  test_mod.rs  test_player.rs  test_utils.rs
src/datamodel/turn/: finished_turn.rs  proposal_voter_role_action_manager.rs  turn.rs  turn_history.rs
src/datamodel/turns/: finished_turn.rs  mod.rs  quest_member_role_action_manager.rs  quest_proposer_role_action_manager.rs  (+2 more)
tests/: EvilCharacter.rs  evil_character.rs  integration_tests.rs
(+35 files in other folders)
